--- a/index.html
+++ b/index.html
@@ -1,152 +1,161 @@
-<table width="300" height="500" class="iphone-wrapper">
-  <tbody width="300" >
-    <tr align="center" valign="top">
-      <td width="50" style="font-size:12px;"> 
-        <div class="top-wrapper">
-          <div style="margin-left:10px;margin-top:4px;">
-          9:41 
+<!DOCTYPE html>
+<html>
+<head>
+  <meta charset="UTF-8">
+  <title>iPhone Representation<title>
+</head>
+<body>
+  <table width="300" height="500" class="iphone-wrapper">
+    <tbody width="300" >
+      <tr align="center" valign="top">
+        <td width="50" style="font-size:12px;"> 
+          <div class="top-wrapper">
+            <div style="margin-left:10px;margin-top:4px;">
+            9:41 
+            </div>
           </div>
-        </div>
-      </td>
-      <td width="200" align="center" valign="top" >
-        <div class="iphone-camera" >
-           <div class="iphone-speaker">
-           </div>
-           <div class="iphone-camera-lens">
-           </div>
-        </div>
-      </td>
-      <td align="left" width="50">
-      <div class="top-wrapper">
-        <div class="bar-wrapper">      
-          <div class="bar low"></div>
-          <div class="bar medium"></div>
-          <div class="bar high"></div>
-        </div>
-        <div class="wifi-wrapper">
-          <div class="wifi-bar-wrapper">
-            <div class="wifi-bar">
-              <div class="wifi-bar wifi-inner">
-                <div class="wifi-dot">
+        </td>
+        <td width="200" align="center" valign="top" >
+          <div class="iphone-camera" >
+             <div class="iphone-speaker">
+             </div>
+             <div class="iphone-camera-lens">
+             </div>
+          </div>
+        </td>
+        <td align="left" width="50">
+        <div class="top-wrapper">
+          <div class="bar-wrapper">      
+            <div class="bar low"></div>
+            <div class="bar medium"></div>
+            <div class="bar high"></div>
+          </div>
+          <div class="wifi-wrapper">
+            <div class="wifi-bar-wrapper">
+              <div class="wifi-bar">
+                <div class="wifi-bar wifi-inner">
+                  <div class="wifi-dot">
+                  </div>
                 </div>
               </div>
             </div>
+            <div class="wifi-block-1"></div>
+            <div class="wifi-block-2"></div>
           </div>
-          <div class="wifi-block-1"></div>
-          <div class="wifi-block-2"></div>
         </div>
-      </div>
-      </td>
-    </tr>
-  </tbody>
-</table>
-<style>
-.iphone-wrapper {
-  box-shadow:0 0 10px gray;
-  border:10px solid black;
-  border-radius:20px;
-}
-.iphone-camera{
-  background-color:black;
-  color:white;
-  min-height:10px;
-  max-height:10px;
-  margin-top:-10px;
-  padding:10px;
-  border-bottom-left-radius:27px;
-  border-bottom-right-radius:27px;
-}
-.iphone-speaker,.iphone-camera-lens {
-  margin-bottom:7px;
-}
-.iphone-speaker{
-  border-radius:10px;
-  height:5px;
-  width:40px;
-  background-color:#1B2E32;
-  display:inline-block;
-}
-.iphone-camera-lens{
-  border-radius:10px;
-  height:5px;
-  width:5px;
-  background-color:#25383C;
-  display:inline-block;
-}
-.wifi-bar-wrapper{
-  width:12px;
-  height:12px;
-  display:inline-block;
-  position:relative;
-}
-.wifi-wrapper {
-  display:none;
-}
-.wifi-bar{
-  display:inline-block;
-  border-radius:50%;
-  margin-top:-50%;
-  width:100%;
-  height:100%;
-  border:3px solid black;
-}
-.wifi-inner{
-  height:40%;
-  width:40%;
-  position:absolute;
-  top:50%;
-  left:30%;
-}
-.wifi-dot {
-  background-color:black;
-  margin:15%;
-  width:60%;
-  height:60%;
-}
-.top-wrapper {
-  margin-top:0px;
-}
-.bar-wrapper {
-  margin-left:10px;
-  display:inline-block;
-}
-.wifi-block-1{
-  background-color: white;
-  width: 18px;
-  height: 13px;
-  transform: rotate(45deg);
-  margin-top: -15px;
-  margin-left: -7px;
-  
-}
-.wifi-block-2{
-  background-color: white;
-  width: 18px;
-  height: 13px;
-  transform: rotate(-45deg);
-  margin-top: -15px;
-  margin-left: 7px;
-}
-.bar {
-  background-color:black;
-  min-width:3px;
-  max-width:3px;
-  display:inline-block;
-  margin-left:-3px;
-}
-.low {
-  min-height:3px;
-  height:3px;
-  max-height:3px;
-}
-.medium{
-  min-height:6px;
-  height:6px;
-  max-height:6px;
-}
-.high{
-  min-height:9px;
-  height:9px;
-  max-height:9px;
-}
-</style>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+  <style>
+  .iphone-wrapper {
+    box-shadow:0 0 10px gray;
+    border:10px solid black;
+    border-radius:20px;
+  }
+  .iphone-camera{
+    background-color:black;
+    color:white;
+    min-height:10px;
+    max-height:10px;
+    margin-top:-10px;
+    padding:10px;
+    border-bottom-left-radius:27px;
+    border-bottom-right-radius:27px;
+  }
+  .iphone-speaker,.iphone-camera-lens {
+    margin-bottom:7px;
+  }
+  .iphone-speaker{
+    border-radius:10px;
+    height:5px;
+    width:40px;
+    background-color:#1B2E32;
+    display:inline-block;
+  }
+  .iphone-camera-lens{
+    border-radius:10px;
+    height:5px;
+    width:5px;
+    background-color:#25383C;
+    display:inline-block;
+  }
+  .wifi-bar-wrapper{
+    width:12px;
+    height:12px;
+    display:inline-block;
+    position:relative;
+  }
+  .wifi-wrapper {
+    display:none;
+  }
+  .wifi-bar{
+    display:inline-block;
+    border-radius:50%;
+    margin-top:-50%;
+    width:100%;
+    height:100%;
+    border:3px solid black;
+  }
+  .wifi-inner{
+    height:40%;
+    width:40%;
+    position:absolute;
+    top:50%;
+    left:30%;
+  }
+  .wifi-dot {
+    background-color:black;
+    margin:15%;
+    width:60%;
+    height:60%;
+  }
+  .top-wrapper {
+    margin-top:0px;
+  }
+  .bar-wrapper {
+    margin-left:10px;
+    display:inline-block;
+  }
+  .wifi-block-1{
+    background-color: white;
+    width: 18px;
+    height: 13px;
+    transform: rotate(45deg);
+    margin-top: -15px;
+    margin-left: -7px;
+
+  }
+  .wifi-block-2{
+    background-color: white;
+    width: 18px;
+    height: 13px;
+    transform: rotate(-45deg);
+    margin-top: -15px;
+    margin-left: 7px;
+  }
+  .bar {
+    background-color:black;
+    min-width:3px;
+    max-width:3px;
+    display:inline-block;
+    margin-left:-3px;
+  }
+  .low {
+    min-height:3px;
+    height:3px;
+    max-height:3px;
+  }
+  .medium{
+    min-height:6px;
+    height:6px;
+    max-height:6px;
+  }
+  .high{
+    min-height:9px;
+    height:9px;
+    max-height:9px;
+  }
+  </style>
+</body>
+</html>
