--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <meta charset="UTF-8">
-  <title>iPhone Representation<title>
+  <title>iPhone Representation</title>
 </head>
 <body>
   <table width="300" height="500" class="iphone-wrapper">
